--- a/Semana-04/CSS/style.css
+++ b/Semana-04/CSS/style.css
@@ -1,5 +1,6 @@
 body{
-    font: 100%/1.5 Helvetica, sans-serif;
+    font: 100%/1.5;
+    font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
 }
@@ -41,6 +42,10 @@ header{
     align-items: center;
     width: 100%;
     height: auto;
+}
+
+input{
+    font-family: 'Roboto', sans-serif;
 }
 
 header div input[type='image'],
