--- a/Semana-06/styles/login.css
+++ b/Semana-06/styles/login.css
@@ -11,7 +11,7 @@ main{
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    margin-top: 3%;
+    margin: 2% 0%;
 }
 
 .logo img{
@@ -24,4 +24,34 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.sign-in{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #373867;
+    margin: 2% 0%;
+    width: 100%;
+}
+
+.sign-in h3{
+    margin: 2% 0%;
+}
+
+.sign-in form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2% 0%;
+}
+
+aside div button{
+    border-radius: 5px;
+    background-color: #49A37B;
+    border-color: #000;
+    border-style: solid;
+    border-width: 1px;
+    width: 100%;
+    height: 50px;
 }
