--- a/Semana-06/styles/sign-up.css
+++ b/Semana-06/styles/sign-up.css
@@ -11,7 +11,7 @@ main{
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    margin-top: 3%;
+    margin: 2% 0%;
 }
 
 .logo img{
@@ -24,4 +24,24 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.sign-up{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #373867;
+    margin: 2% 0%;
+    width: 100%;
+}
+
+.sign-up h3{
+    margin: 2% 0%;
+}
+
+.sign-up form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2% 0%;
 }
