BaSP-2022-W6: Corrected signup inputs and added style to the forms

--- a/Semana-06/styles/header.css
+++ b/Semana-06/styles/header.css
@@ -8,10 +8,6 @@ header{
     height: auto;
 }
 
-input{
-    font-family: 'Roboto', sans-serif;
-}
-
 header div input[type='image'],
 header form input[type='image']{
     height: 50px;
@@ -25,6 +21,7 @@ header div button{
 }
 
 .burguer-btn input{
+    border: none;
     filter: invert(100%);
 }
 
