--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -48,11 +48,13 @@
                     <input required type="email" name="email" placeholder="Click here to enter your Email">
                     <label>Password</label>
                     <input required type="password" name="fullName" placeholder="Click here to enter your password">
-                    <span>
-                        <input type="checkbox" value="lsRememberMe" class="rememberMe" aria-label="Do you want the site to remember your credentials?">
-                        <label>Remember me</label>
+                    <div>
+                        <span>
+                            <input type="checkbox" value="lsRememberMe" class="rememberMe" aria-label="Do you want the site to remember your credentials?">
+                            <label>Remember&nbsp;me</label>
+                        </span>
                         <a href="password-recovery">Forgot your password?</a>
-                    </span>
+                    </div>
                     <button class="light-green-button" type="button">Log in</button>
                 </form>
             </section>
