--- a/Semana-06/styles/sign-up.css
+++ b/Semana-06/styles/sign-up.css
@@ -11,7 +11,7 @@ main{
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    margin: 2% 0%;
+    margin: 1.5% 0%;
 }
 
 .logo img{
@@ -31,17 +31,37 @@ main{
     flex-direction: column;
     align-items: center;
     color: #373867;
-    margin: 2% 0%;
+    margin: 1.5% 0%;
     width: 100%;
 }
 
 .sign-up h3{
-    margin: 2% 0%;
+    margin: 1% 0%;
 }
 
 .sign-up form{
+    margin: 1% 0%;
+}
+
+.sign-up form div{
+    display: flex;
+    flex-direction: row;
+}
+
+.sign-up div span{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin: 2% 0%;
+    margin: 1%;
+}
+
+.sign-up form div span label{
+    margin: 1% 0%;
+}
+
+.sign-up form div span input{
+    margin: 1% 0%;
+}
+
+.sign-up input{
+    width: 100%;
 }
