--- a/Semana-06/styles/styles.css
+++ b/Semana-06/styles/styles.css
@@ -22,6 +22,14 @@ h4{
     margin-bottom: 2%;
 }
 
+input{
+    border-color: #7B61FF;
+    border-style: solid;
+    border-radius: 4px;
+    font: 100%/1.5 'Roboto', sans-serif;
+    width: 100%;
+}
+
 .container{
     display: flex;
     flex-wrap: wrap;
@@ -54,3 +62,4 @@ button:hover{
     border-style: none;
     border-radius: 5px;
     font: 100%/1.5 'Roboto', sans-serif;
+}
