BaSP-2022-W6: Login and signup basic style, added templates for error messages

--- a/Semana-06/views/index.html
+++ b/Semana-06/views/index.html
@@ -213,9 +213,9 @@
                 <form aria-label="Form">
                     <div class="form-left" aria-label="Mandatory fields">
                         <label>Full Name:</label>
-                        <input required type="text" name="fullName" placeholder="Click here to enter your name">
+                        <input required type="text" name="fullName" placeholder="Click here to type">
                         <label>Email:</label>
-                        <input required type="email" name="email" placeholder="Click here to enter your Email">
+                        <input required type="email" name="email" placeholder="Click here to type">
                         <label>Select contact area:</label>
                         <select required>
                             <option value="">Select area</option>
@@ -226,7 +226,7 @@
                         </select>
                     </div>
                     <div class="form-right" aria-label="Enter message and submit">
-                        <textarea required name="message" placeholder="Click here to enter your message"></textarea>
+                        <textarea required name="message" placeholder="Click here to type"></textarea>
                         <input class="light-green-button" type="submit" value="Submit">
                     </div>
                 </form>
