--- a/Semana-06/styles/login.css
+++ b/Semana-06/styles/login.css
@@ -11,7 +11,7 @@ main{
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    margin: 2% 0%;
+    margin: 1.5% 0%;
 }
 
 .logo img{
@@ -26,48 +26,50 @@ main{
     align-items: center;
 }
 
-.sign-in h3{
-    margin: 1% 0%;
-}
-
 .sign-in{
     display: flex;
     flex-direction: column;
     align-items: center;
     color: #373867;
-    margin: 2% 0%;
+    margin: 1.5% 0%;
     width: 100%;
 }
 
 .sign-in h3{
-    margin: 2% 0%;
+    margin: 1% 0%;
 }
 
 .sign-in form{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2% 0%;
+}
+
+.sign-in form fieldset{
+    margin: 1% 0%;
+}
+
+.sign-in form fieldset label{
+    margin: 1% 0%;
+}
+
+.sign-in form fieldset input{
+    margin: 1% 0%;
 }
 
 .sign-in form div{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
 }
 
-.sign-in form span{
+.sign-in form div span{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
 }
 
-aside div button{
-    border-radius: 5px;
-    background-color: #49A37B;
-    border-color: #000;
-    border-style: solid;
-    border-width: 1px;
-    width: 100%;
-    height: 50px;
+.sign-in form input[type=submit]{
+    align-self: center;
+    width: 15%;
 }
