--- a/Semana-06/styles/sign-up.css
+++ b/Semana-06/styles/sign-up.css
@@ -40,28 +40,34 @@ main{
 }
 
 .sign-up form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     margin: 1% 0%;
+    width: 80%;
 }
 
-.sign-up form div{
+.sign-up form fieldset{
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
-.sign-up div span{
+.sign-up fieldset div{
     display: flex;
     flex-direction: column;
     margin: 1%;
 }
 
-.sign-up form div span label{
+.sign-up form fieldset div label{
     margin: 1% 0%;
 }
 
-.sign-up form div span input{
+.sign-up form fieldset div input{
     margin: 1% 0%;
 }
 
-.sign-up input{
-    width: 100%;
+.sign-up form input[type=submit]{
+    align-self: center;
+    width: 15%;
 }
