--- a/Semana-06/styles/sign-up.css
+++ b/Semana-06/styles/sign-up.css
@@ -44,13 +44,15 @@ main{
     flex-direction: column;
     justify-content: space-between;
     margin: 1% 0%;
-    width: 80%;
+    width: 100%;
 }
 
 .sign-up form fieldset{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 .sign-up fieldset div{
@@ -70,4 +72,67 @@ main{
 .sign-up form input[type=submit]{
     align-self: center;
     width: 15%;
+}
+
+@media(max-width:768px){
+    .search-field{
+        width: 250px;
+        height: 50px;
+    }
+    
+    .search-submit{
+        width: 50px;
+        height: 50px;
+    }
+
+    .logo{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .sign-up form{
+        width: 80%;
+    }
+}
+
+@media(max-width:480px){
+    body{
+        overflow-x:hidden;
+    }
+
+    header nav,
+    .search-field{
+        display: none;
+    }
+
+    .burguer-btn{
+        order:1;
+    }
+
+    .search-bar{
+        order:3;
+    }
+
+    .search-submit{
+        background-color: transparent;
+        border-style: hidden;
+        filter: invert(100%);
+    }
+    
+    .access{
+        order:2;
+    }
+
+    .logo img{
+        margin:0%;
+    }
+
+    .sign-up form fieldset{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
